files for java program & fixes & some java days