@@ -1,15 +1,12 @@
-package year2023;
-
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.List;
 
-public class Day2 {
+public class Day2_1 {
 
     public static void main(String[] args) throws IOException {
-
-        //Part one
-        List<String> lines = Utils.readLines(Path.of("src/year2023/files/02.txt"));
+        List<String> lines = Files.readAllLines(Paths.get(args[0]));
         int sum = 0;
 
         for (String line : lines) {
@@ -39,49 +36,6 @@ public class Day2 {
             if (possbile) {
                 sum += id;
             }
-        }
-
-        System.out.println(sum);
-
-
-        //Part two
-        sum = 0;
-
-        for (String line : lines) {
-            line = line.replace("Game ", "");
-            int id = Integer.parseInt(line.substring(0, line.indexOf(":")));
-
-            int red = 0;
-            int green = 0;
-            int blue = 0;
-
-            line = line.substring(line.indexOf(":") + 1);
-            String[] sets = line.split(";");
-
-            for (String set : sets) {
-                String[] reveals = set.split(", ");
-
-                for (String reveal : reveals) {
-                    reveal = reveal.trim();
-
-                    int count = Integer.parseInt(reveal.split(" ")[0]);
-                    String color = reveal.split(" ")[1];
-
-                    switch (color) {
-                        case "red":
-                            red = Math.max(red, count);
-                            break;
-                        case "green":
-                            green = Math.max(green, count);
-                            break;
-                        case "blue":
-                            blue = Math.max(blue, count);
-                            break;
-                    }
-                }
-            }
-
-            sum += red * green * blue;
         }
 
         System.out.println(sum);
